# tame

./: .cruft.json  .flake8  .fprettify.cfg  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CMakeLists.txt  ChangeLog.md  MANIFEST.in  Makefile  README.md  REUSE.toml  ReadMe.md  conftest.py  pyproject.toml  setup.py  tox.ini
.docker/: Dockerfile-fabm  Makefile  ReadMe.md
.github/: dependabot.yaml  dependabot.yml
.github/ci/matrix/default/: Pipfile
.github/workflows/: ci.yaml  deployment.yaml  docker-publish.yaml  documentation.yaml  fortran.yaml  quality.yaml  security.yaml  testing.yaml
.gitlab/: ReadMe.md  deploy-docker.yaml  deploy-joss.yaml  deploy-zenodo.yaml  lint-license.yaml
.reuse/: add_license.py  shortcuts.yaml
ci/matrix/default/: Pipfile
coupl_bERSEM/: CMakeLists.txt  npzd_dep.F90  npzdep.F90  tame_model_library.F90
doc/: .gitignore  Makefile  ReadMe.md  api.md  conf.py  contributing.md  installation.md  make.bat
doc/joss/: .gitignore  Makefile  ReadMe.md  joss-template.tex  joss_banner_title.png.license  paper.bib  paper.md
doc/rtd/: conf.py  index.md  requirements.txt
doc/rtd/_templates/: footer.html
doc/rtd/api/: python.rst
docs/: api.md  conf.py  contributing.md  index.md  installation.md  make.bat  requirements.txt
fortran/: CMakeLists.txt  ReadMe.md  Rules4Coding.md  aggregation.F90  bgc.F90  bgc_test.F90  phy.F90  phy_stoich.F90  tame_functions.F90  tame_model_library.F90  tame_types.F90  temperature.F90  vertical_movement.F90  zoo.F90
fortran/chatGPT/: infinite_stoichiometry.F90
fortran/chemistry/: chemistry.F90  detritus.F90  nutrient.F90
maecs2/: maecs_do.F90
matlab/: read_0Ddata_nc.m  read_nc_simple.m
parser/: conv_yaml_fabm.c  fabm-selma.yaml  tame-bgc.yaml
parser/tame/: bgc_gen.F90  tame_gen.F90
phytoplankton/: phy.F90
postprocessing/: .gitignore  changeNsee.sh  cmp_0Dres.m  get_scripts.sh  modifysetup.sh  replace_y.sh
preprocessing/generator/: .gitignore  entities.yaml  methane.yaml  model.F90.in  phytoplankton_gen.F90  selma_gen.F90  zooplankton_gen.F90
preprocessing/parser/: fabm-selma.yaml  tame-bgc.yaml
python/: .gitignore  __init__.py  _version.py  create_fabm.py  entities.yaml  methane.yaml  model.F90.in  phytoplankton_gen.F90  selma_gen.F90  zooplankton_gen.F90
setup/: .gitignore
setup/0d/: .gitignore  Makefile  fabm.yaml  fabm.yaml~HEAD  output.yaml  outputphyto.yaml  run.nml  tame-bgc.yaml
setup/0d-chemistry/: Makefile  detritus.yaml  fabm.yaml  output.yaml  run.nml  sink.yaml  tame-bgc.yaml
setup/0d-time/: .gitignore  Makefile  ReadMe.md  fabm.yaml  run.nml
setup/1d-cuxhaven/: .gitignore  ReadMe.md  fabm_cuxhaven.yaml  gotm.yaml  output.yaml  test_gotm.sh
setup/1d-cuxhaven/data/: get_data.sh  meteofile.csv  setup_data.R
setup/testcases/phytoplankton/: .gitignore  gotm_fabm.yaml
setup/variation/: Makefile  master_var.batch  var.batch
tame/: CMakeLists.txt  ReadMe.md  Rules4Coding.md  bgc.F90  bgc_test.F90  life.f90  npzd_dep.F90  npzdep.F90  phy.F90  phy_stoich.F90  tame_grazing.F90  tame_model_library.F90  temperature.F90  time.F90  vertical_movement.F90  zoo.F90  zoo_multi_species.F90
tame/chatGPT/: infinite_stoichiometry.F90
tame/chemistry/: chemistry.F90  detritus.F90  nutrient.F90  phytoplankton.F90  sink.F90
tame/maecs/: maecs_do.F90
testcases/phytoplankton/: .gitignore  fabm.yaml  gotm_fabm.yaml  output.yaml  phytoplankton.yaml  run.nml
tests/: test_imports.py
variation/: Makefile  master_var.batch  var.batch
