# SPDX-FileCopyrightText: 2024-2025 Helmholtz-Zentrum hereon GmbH
# SPDX-FileContributor: Carsten Lemmen <carsten.lemmen@hereon.de>
# SPDX-License-Identifier: CC0-1.0

[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools >= 61.0', 'versioneer[toml]']

[project]
name = "tame"
dynamic = ["version"]
description = "Trait-based Aquatic Model of Ecosystems"

readme = "ReadMe.md"
keywords = [
    "FABM",
    "Trait-based model",
    "ecosystem model",
]

authors = [
    { name = 'Ovidio García ', email = 'ovidio.garcia@hereon.de' },
    { name = 'Thomas Imbert', email = 'thomas.imbert@hereon.de' },
    { name = 'Carsten Lemmen', email = 'carsten.lemmen@hereon.de' },
    { name = 'Kai W. Wirtz', email = 'kai.wirtz@hereon.de' },
]
maintainers = [
    { name = 'Carsten Lemmen', email = 'carsten.lemmen@hereon.de' },
]
license = { text = 'Apache 2.0' }

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache 2.0",
    "Operating System :: OS Independent",
    "Programming Language :: Fortran",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

requires-python = '>= 3.9'
dependencies = [
    # add your dependencies here
]

[project.urls]
Homepage = 'https://codebase.helmholtz.cloud/kse/tame'
Documentation = "https://tame.readthedocs.io/en/latest/"
Source = "https://codebase.helmholtz.cloud/kse/tame"
Tracker = "https://codebase.helmholtz.cloud/kse/tame/issues/"

[project.optional-dependencies]
testsite = [
    "tox",
    "isort==5.12.0",
    "black==23.1.0",
    "blackdoc==0.3.8",
    "flake8==7.2.0",
    "pre-commit",
    "mypy",
    "pytest-cov",
    "reuse",
    "cffconvert",
]
docs = [
    "autodocsumm",
    "sphinx-rtd-theme",
    "hereon-netcdf-sphinxext",
    "sphinx-design",
    "myst_parser",
]
dev = [
    "tame[testsite]",
    "tame[docs]",
    "PyYAML",
    "types-PyYAML",
]


[tool.mypy]
ignore_missing_imports = true

[tool.setuptools]
zip-safe = false
license-files = ["LICENSES/*"]

[tool.setuptools.package-data]
python = ["py.typed"]

[tool.setuptools.packages.find]
namespaces = false
exclude = [
    'doc',
    'tests*',
    'examples'
]

[tool.pytest.ini_options]
addopts = '-v'

[tool.versioneer]
VCS = 'git'
style = 'pep440'
versionfile_source = 'python/_version.py'
versionfile_build = 'python/_version.py'
tag_prefix = 'v'
parentdir_prefix = 'tame-'

[tool.isort]
profile = "black"
line_length = 79
src_paths = ["python"]
float_to_top = true
known_first_party = "python"

[tool.black]
line-length = 79
target-version = ['py39']

[tool.coverage.run]
omit = ["python/_version.py"]
